Added 404 error handling to endpoints that we want to keep; updated spec YAML; started archive of deprecated code
