# ubkg-api-spec.yaml
@@ -14,7 +14,7 @@ servers:
 paths:
   /codes/{code_id}/codes:
     get:
-      summary:  In general, a Concept node in UBKG is associated with Code nodes from multiple source vocabularies (SABs). For example, the code "SNOMEDCT_US:254837009" (Malignant neoplasm of breast)  maps to UMLS CUI C0006142, which links to codes such as "NCI:C9335" and "MSH:D001943". This endpoint returns the list of Code nodes that  link to the same Concept node to which the specified code links. The list can be filtered to return only those codes from particular SABs.
+      summary:  In general, a Concept node in UBKG has CODE relationships with (links to) Code nodes from multiple source vocabularies (SABs). For example, the Code "SNOMEDCT_US:254837009" (Malignant neoplasm of breast) links to the Concept with identifier "C0006142"; this Concept also links to Code nodes with identifiers including "NCI:C9335" and "MSH:D001943". This endpoint returns the list of Code nodes that share the Concept node to which the specified code links. The list of Codes can be filtered to return only those Codes from particular sources (SABs).
       operationId: codes_code_id_codes_get
       parameters:
         - name: code_id
@@ -27,7 +27,7 @@ paths:
         - name: sab
           in: query
           required: false
-          description: A filter for one or more sources (SABs) for the codes that share links to the same Concept to which the code with CodeID=_code_id_ links. Can be either a list of values delimited with URL-encoded commas (?sab=SAB1%2CSAB2%2SAB3) or individual key-value pairs (?sab=SAB1&sab=SAB2&SAB=SAB3).
+          description: A filter for one or more sources (SABs) for the Codes that share links to the same Concept to which the Code with CodeID=_code_id_ links. Can be either a list of values delimited with URL-encoded commas (e.g., ?sab=SAB1%2CSAB2%2SAB3) or individual key-value pairs (e.g., ?sab=SAB1&sab=SAB2&SAB=SAB3).
           schema:
             type: array
             uniqueItems: true
@@ -37,7 +37,7 @@ paths:
             default: []
       responses:
         '200':
-          description: A JSON array of objects that correspond to Code nodes
+          description: A JSON array of objects that correspond to Code nodes that share the Concept associated with the specified Code
           content:
             application/json:
               schema:
@@ -53,7 +53,7 @@ paths:
   /codes/{code_id}/concepts:
     get:
       operationId: codes_code_id_concepts_get
-      summary: Returns a list of Concept nodes (Concept, Preferred term) with CODE relationships with the specified Code node.
+      summary: In general, a Code node in UBKG has CODE relationships with (or links to) multiple Concept nodes. This endpoint returns a list of Concept nodes (Concept, Preferred term) that have CODE relationships with the specified Code node.
       parameters:
         - name: code_id
           in: path
@@ -64,29 +64,33 @@ paths:
             example: SNOMEDCT_US:254837009
       responses:
         '200':
-          description: A JSON array of information on Concept nodes that relate to the specified Code node
+          description: A JSON array of information on Concept nodes that have CODE relationships to the specified Code node
           content:
             application/json:
               schema:
                 type: array
                 items:
                   $ref: '#/components/schemas/ConceptDetail'
+        '404':
+          description: no Concept nodes for the specified code
+        '5XX':
+          description: Unknown error
   /concepts/{concept_id}/codes:
     get:
       operationId: concepts_concept_id_codes_get
-      summary: Returns a distinct list of code_id(s) that code the concept
+      summary: In general, a Concept node has CODE relationships with (links to) muliple Code nodes. This endpoint returns information on the set of Code nodes that link to the specified Concept.
       parameters:
         - name: concept_id
           in: path
           required: true
-          description: The concept identifier
+          description: The identifier for the Concept (also known as the Concept Unique Identifier, or CUI)
           schema:
             type: string
             example: C0678222
         - name: sab
           in: query
           required: false
-          description: One or more sources (SABs) to return
+          description: A filter for one or more sources (SABs) for the Codes that link to the specified Concept. Can be either a list of values delimited with URL-encoded commas (e.g., ?sab=SAB1%2CSAB2%2SAB3) or individual key-value pairs (e.g., ?sab=SAB1&sab=SAB2&SAB=SAB3).
           schema:
             type: array
             uniqueItems: true
@@ -96,7 +100,7 @@ paths:
             default: []
       responses:
         '200':
-          description: A JSON array of code_id(s) that code the concept
+          description: A JSON array of code_id(s) (in format _SAB_:_CODE), for the Codes that link to the specified Concept
           content:
             application/json:
               schema:
@@ -104,6 +108,12 @@ paths:
                 items:
                   type: string
                   example: CHV 0000052645
+        '400':
+          description: invalid parameter name
+        '404':
+          description: no Codes for the specified parameters (_concept_id_ and _sab_)
+        '5XX':
+          description: Unknown error
   /concepts/{concept_id}/concepts:
     get:
       operationId: concepts_concept_id_concepts_get
